--- a/ESTUDIOK/index.html
+++ b/ESTUDIOK/index.html
@@ -102,7 +102,7 @@
             <i class="fa fa-chevron-right"></i>
         </button>
         <div class="carrito">
-            <button><a href="pago.html">Conocer Más...</a></button>
+            <button><a href="pago.html">Comprar servicio</a></button>
         </div>
         <section class="objetivos">
             <h3>Objetivos</h3>
